Fix base href and script src for Vercel deployment

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vistaran Help Desk</title>
-    <base href="./">
+    <base href="/">
     
     <!-- The build process will automatically inject CSS. Tailwind is now handled by npm. -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -160,6 +160,6 @@
       The bundler (used by Vercel) will automatically inject the final
       JavaScript file here in a production build.
     -->
-    <script type="module" src="./index.tsx"></script>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
