Fix Tailwind CSS setup and resolve production build issues

--- a/index.html
+++ b/index.html
@@ -6,13 +6,8 @@
     <title>Vistaran Help Desk</title>
     <!-- <base href="./"> -->
     
-    <!-- The build process will automatically inject CSS. Tailwind is now handled by npm. -->
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script>
-      tailwind.config = {
-        darkMode: 'class', // Enable dark mode based on a class
-      }
-    </script>
+    <!-- Tailwind CSS is now handled by npm -->
+    <!-- Config moved to tailwind.config.js -->
 
     <!-- Font Awesome is kept as a CDN link for simplicity, but can also be managed via npm. -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
